feat: 完成model逻辑
